# mcpocket

./: Cargo.toml  README.md  agent.md
.claude/workflows/: build-mcpocket-tui.js
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-05-28-mcpocket-tui.md
docs/superpowers/specs/: 2026-05-28-mcpocket-tui-design.md
scripts/: install.sh
src/: client_sync.rs  config.rs  config_edit.rs  doctor.rs  lib.rs  main.rs  mcp.rs  oauth.rs  policy.rs  router.rs  telemetry.rs  upstream.rs
src/tui/: app.rs  discovery.rs  input.rs  mod.rs  theme.rs  ui.rs
tests/: e2e_gateway.rs
